5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1642_2449.log
== TEST (2019-04-17 19:26:41) 
-- CODE:
cfa = float(input('Coeficiente A :'))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:26:59) 
-- CODE:
cfa = float(input("Coeficiente A :"))
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 19:30:52) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

x = ((cfc * cfe)-(cfb*cff)) / ((cfa*cfe)-(cfb*cfd))

-- EXECUTION TIME:
0.284321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1642/2449/main.py", line 8, in <module>
    x = ((cfc * cfe)-(cfb*cff)) / ((cfa*cfe)-(cfb*cfd))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:35:09) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = ((cfa*cfe)-(cfb*cfd))
if(divisor == 0):
	print("Nao tem solucao")
else	
	x = ((cfc * cfe)-(cfb*cff)) / 
	y = ((cfa * cff)-(cfc*cfd)) / ((cfa*cfe)-(cfb*cfd))
   print(x,y)
-- ERROR:
File "XXXX", line 11
    else	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:35:16) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = ((cfa*cfe)-(cfb*cfd))
if(divisor == 0):
	print("Nao tem solucao")
else:	
	x = ((cfc * cfe)-(cfb*cff)) / 
	y = ((cfa * cff)-(cfc*cfd)) / ((cfa*cfe)-(cfb*cfd))
   print(x,y)
-- ERROR:
File "XXXX", line 12
    x = ((cfc * cfe)-(cfb*cff)) / 
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:35:47) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor == 0):
	print("Nao tem solucao")
else:	
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x,y)
-- ERROR:
File "XXXX", line 14
    print(x,y)
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:36:04) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor == 0):
	print("Nao tem solucao")
else:	
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:36:34) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor == 0):
	print("Nao tem solucao")
else:	
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   	print(x)
		print(y)
-- ERROR:
File "XXXX", line 14
    print(x)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:37:11) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
else:	
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:37:19) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
	else:	
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:37:25) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
	else:	
		print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:37:33) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
	else:	
		printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:37:46) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
else:	
		printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 19:38:07) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
else:	
		printx("Nao tem solucao")
	
-- EXECUTION TIME:
0.193561
-- ERROR:
  File "/home/codebench/codes/1642/2449/main.py", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:38:15) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
	print(y)
else:	
	printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:38:32) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print('x')
	print(y)
else:	
	printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print('x')
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:38:49) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
  print(x)
  print(y)
else:	
	printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:39:02) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
    print(x)
    print(y)
else:	
	printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:39:13) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)
if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x)
    
else:	
	printx("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 12
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:39:53) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)

if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x) 
else:	
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 13
    print(x) 
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:41:55) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)

if(divisor != 0):
	{x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x) }
else:	
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 11
    {x = ((cfc * cfe)-(cfb*cff)) / divisor 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:42:06) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)

if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
   print(x) 
else:	
	print("Nao tem solucao")
	
-- ERROR:
File "XXXX", line 13
    print(x) 
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:43:38) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)

if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
	print(x) 
else:	
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 19:44:29) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)

if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
	print(x) 
	print(y)
else:	
	print("Nao tem solucao")
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 19:44:44) 
-- CODE:
cfa = float(input("Coeficiente A :"))
cfb = float(input("Coeficiente B :"))
cfc = float(input("Coeficiente C :"))
cfd = float(input("Coeficiente D :"))
cfe = float(input("Coeficiente E :"))
cff = float(input("Coeficiente F :"))

divisor = (cfa*cfe)-(cfb*cfd)

if(divisor != 0):
	x = ((cfc * cfe)-(cfb*cff)) / divisor 
	y = ((cfa * cff)-(cfc*cfd)) / divisor
	print(x) 
	print(y)
else:	
	print("Nao tem solucao")
	
-- EXECUTION TIME:
0.13721
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
